--- a/software.html
+++ b/software.html
@@ -39,6 +39,38 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://flashrecruit.com/jobs/8115287'>Web Software Engineer in Chicago (Remote), Illinois - Chat Now Live with a Recruiter (Job #8115287) | FlashRecruit</a></h5> 
+<p><span class="badge badge-light">Chicago Chicago Chicago</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/realtor/2fb05322-1932-4429-9d1c-7053e6b32824'>realtor.com - Sr. Software Engineer ? Nurturing Platform</a></h5> 
+<p><span class="badge badge-light">Vancouver, BC</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/realtor/67a90acc-cd67-4b2e-be5d-a80c01c23a51'>realtor.com - Senior Software Engineer   (Platform and Monetization)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/realtor/6c40b5b9-5371-43af-a35d-781928df09e9'>realtor.com - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/realtor/bfb6de14-1fbb-4a9f-b2ae-7bb21f8bb4d1'>realtor.com - Software Engineer - Back-end</a></h5> 
+<p><span class="badge badge-light">Vancouver, BC  Vancouver, BC</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/realtor/e70c94a9-05af-46ed-9ee9-59c7e44e4d06'>realtor.com - Senior Software Engineer ? Managed Service Markets</a></h5> 
+<p><span class="badge badge-light">Santa Clara, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/wealthfront/a400e7dd-e662-497c-aaa0-68b1340301dd'>Wealthfront - Senior Software Engineer- Distributed Applications</a></h5> 
+<p><span class="badge badge-light">Palo Alto, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='http://konradgroup.applytojob.com/apply/cKdBvY2eYz/Software-Developer-Entry-Level'>Software Developer (Entry Level) - Konrad Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
@@ -121,7 +153,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.orizon.de/de/job/real-time-software-developer-m-f-d-manching-11985'>Real-Time Software Developer (m/f/d) in Manching - Orizon GmbH</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.orizon.de/de/job/real-time-software-developer-m-f-d-manching-11985'>Real-Time Software Developer (m/f/d) in Manching - Orizon GmbH</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -137,7 +169,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vonage/jobs/4490557002'>Job Application for Sr. Software Engineer at Vonage</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vonage/jobs/4490557002'>Job Application for Sr. Software Engineer at Vonage</a></h5> 
 <p><span class="badge badge-light">Holmdel, NJ</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -195,7 +227,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698427755-software-developer'>Verisk Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698427755-software-developer'>Verisk Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lehi, UT, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -219,7 +251,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -247,7 +279,7 @@
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ImaginarySpaces/743999697183009-software-developer-junior'>Imaginary Spaces Software Developer - Junior | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ImaginarySpaces/743999697183009-software-developer-junior'>Imaginary Spaces Software Developer - Junior | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada  Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -299,11 +331,11 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://optelgroup.applytojob.com/apply/uTqcKdkTE8/Senior-Software-Engineer'>Senior Software Engineer - Optel Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://optelgroup.applytojob.com/apply/uTqcKdkTE8/Senior-Software-Engineer'>Senior Software Engineer - Optel Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698407941-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698407941-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -343,7 +375,7 @@
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nAtvnMwc'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nAtvnMwc'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -355,7 +387,7 @@
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oDArbfwz&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=niRlnMw8'>NICE Careers - Senior Java Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oDArbfwz&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=niRlnMw8'>NICE Careers - Senior Java Software Engineer</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -407,41 +439,9 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.womenwhocode.com/jobs/5444?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Software Engineer - Red Hat | Women Who Code</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5444?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Software Engineer - Red Hat | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914739'>Job Application for Senior Software Engineer_Marketing Platform at Coupang</a></h5> 
-<p><span class="badge badge-light">Shanghai</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914938'>Job Application for Principal Software Engineer_Marketing Platform at Coupang</a></h5> 
-<p><span class="badge badge-light">Shanghai</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1832383'>Job Application for Software Engineer - Summer Intern 2020 at Dataminr</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698365556-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698365654-software-engineer-backend'>BlaBlaCar Software Engineer Backend | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698367180-embedded-software-engineer'>Bosch Group Embedded Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/agari/jobs/4498479002'>Job Application for Backend Software Engineer, AIR at Agari</a></h5> 
-<p><span class="badge badge-light">Foster City United States Raleigh, North Carolina United States</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/si/jobs/1936788'>Job Application for Senior Full-Stack Software Engineer at SimplyInsured</a></h5> 
-<p><span class="badge badge-light">San Francisco  United States</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
